--- a/imgCut.css
+++ b/imgCut.css
@@ -15,7 +15,6 @@
 	height: 0;
 	width: 0;
 	position: absolute;	
-	overflow: hidden;
 	display: none;
 	border: 1px #fff dashed;
 	cursor: move;
@@ -25,4 +24,87 @@
 }
 .cutImg{
 	position: absolute;	
+}
+.dragDiv{
+	position: absolute;
+	overflow: visible;
+	width: 100%;
+	height: 100%;
+	z-index: 80;		
+}
+.imgWrap{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	overflow: hidden;
+	z-index: 79;
+}
+.resize-handle{
+	width: 7px;
+	height: 7px;
+	position: absolute;
+	border: 1px solid #eee;
+	background-color: #333;
+	opacity: 0.5;
+	z-index: 101;
+}
+.resize-dragbar{
+	position: absolute;
+	z-index: 100;
+}
+.resize-t{
+	cursor: n-resize;
+	width: 100%;
+	height: 7px;
+	top: 0px;
+	margin-top: -4px;
+}
+.resize-b{
+	cursor: s-resize;
+	width: 100%;
+	height: 7px;
+	bottom: 0px;
+	margin-bottom: -4px;
+}
+.resize-l{
+	cursor: w-resize;
+	width: 7px;
+	height: 100%;
+	left: 0px;
+	margin-left: -4px;
+}
+.resize-r{
+	cursor: e-resize;
+	width: 7px;
+	height: 100%;
+	right: 0px;
+	margin-right: -4px;
+}
+.resize-lt{
+	cursor:nw-resize;
+	left: 0;
+	top: 0;
+	margin-left: -4px;
+	margin-top: -4px;
+}
+.resize-lb{
+	cursor:sw-resize;
+	left: 0;
+	bottom: 0;
+	margin-left: -4px;
+	margin-bottom: -4px;
+}
+.resize-rt{
+	cursor: ne-resize;
+	right: 0;
+	top: 0;
+	margin-right: -4px;
+	margin-top: -4px;
+}
+.resize-rb{
+	cursor: se-resize;
+	right: 0;
+	bottom: 0;
+	margin-right: -4px;
+	margin-bottom: -4px;
 }
