--- a/imgCut.css
+++ b/imgCut.css
@@ -1,7 +1,3 @@
-#testImg{
-	position: absolute;
-	left: 200px;
-}
 .imgCutWrapDiv{
 	position: absolute;
 	background-color: black;
@@ -24,6 +20,14 @@
 }
 .imgCutWrapDiv .cutImg{
 	position: absolute;	
+	max-width: none;
+	max-height: none;
+	min-height: none;
+	min-width: none;
+	border: none;
+	float: none;
+	margin: 0;
+	padding: 0;
 }
 .imgCutWrapDiv .dragDiv{
 	position: absolute;
